fix css line break in pre

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -70,7 +70,7 @@ footer {
     .body {
         font-size: 18px;
         line-height: 2em;
-        white-space: pre;
+        white-space: pre-line;
     }
     .resources {
         margin: 10px 0;
